Fixed deprecation of Class#newInstance()